Added more stuff to the database part of the dissertation

--- a/dissertation/l4proj.bib
+++ b/dissertation/l4proj.bib
@@ -116,6 +116,18 @@
    year = {2017},
 }
 
+@inbook{Bartoszewski2019,
+   abstract = {This paper presents the issue of geographic data storage in NoSQL databases. The authors present the performance investigation of the non-relational database MongoDB with its built-in spatial functions in relation to the PostgreSQL database with a PostGIS spatial extension. As part of the tests, the authors were designed queries simulating common problems in the processing of point data. In addition, the main advantages and disadvantages of NoSQL databases are presented in the context of the ability to manipulate spatial data.},
+   author = {Dominik Bartoszewski and Adam Piorkowski and Michal Lupa},
+   doi = {10.1007/978-3-030-19093-4_22},
+   journal = {Communications in Computer and Information Science},
+   pages = {291-302},
+   title = {The Comparison of Processing Efficiency of Spatial Data for PostGIS and MongoDB Databases},
+   volume = {1018},
+   url = {http://link.springer.com/10.1007/978-3-030-19093-4_22},
+   year = {2019},
+}
+
 @book{Xu2016,
    abstract = {This reference and handbook describes theory, algorithms and applications of the Global Positioning System (GPS/Glonass/Galileo/Compass). It is primarily based on source-code descriptions of the KSGsoft program developed at the GFZ in Potsdam. The theory and algorithms are extended and verified for a new development of a multi-functional GPS/Galileo software. Besides the concepts such as the unified GPS data processing method, the diagonalisation algorithm, the adaptive Kalman filter, the general ambiguity search criteria, and the algebraic solution of variation equation reported in the first edition, the equivalence theorem of the GPS algorithms, the independent parameterisation method, and the alternative solar radiation model reported in the second edition, the modernisation of the GNSS system, the new development of the theory and algorithms, and research in broad applications are supplemented in this new edition. Mathematically rigorous, the book begins with the introduction, the basics of coordinate and time systems and satellite orbits, as well as GPS observables, and deals with topics such as physical influences, observation equations and their parameterisation, adjustment and filtering, ambiguity resolution, software development and data processing and the determination of perturbed orbits.},
    author = {Guochang Xu and Yan Xu},
