Fixed the reference for the paper

--- a/dissertation/l4proj.bib
+++ b/dissertation/l4proj.bib
@@ -120,7 +120,7 @@
    abstract = {This paper presents the issue of geographic data storage in NoSQL databases. The authors present the performance investigation of the non-relational database MongoDB with its built-in spatial functions in relation to the PostgreSQL database with a PostGIS spatial extension. As part of the tests, the authors were designed queries simulating common problems in the processing of point data. In addition, the main advantages and disadvantages of NoSQL databases are presented in the context of the ability to manipulate spatial data.},
    author = {Dominik Bartoszewski and Adam Piorkowski and Michal Lupa},
    doi = {10.1007/978-3-030-19093-4_22},
-   journal = {Communications in Computer and Information Science},
+   booktitle = {Communications in Computer and Information Science},
    pages = {291-302},
    title = {The Comparison of Processing Efficiency of Spatial Data for PostGIS and MongoDB Databases},
    volume = {1018},
@@ -174,7 +174,7 @@
    author={{PostGIS}},
    title={PostGIS},
    year={2023},
-   url={https://postgis.net/}
+   url={https://postgis.net/},
    urldate={2023-02-07}
 }
 
@@ -183,7 +183,7 @@
    title={{PostGreSQL}},
    year={2023},
    url={https://www.postgresql.org/},
-   urldate={2023-02-07}
+   urldate={2023-02-07},
 }
 
 @misc{mongodb,
@@ -191,5 +191,5 @@
    title={MongoDB},
    year={2023},
    url={https://www.mongodb.com/},
-   urldate={2023-02-07}
+   urldate={2023-02-07},
 }
