Fixed the referencing problem

--- a/dissertation/l4proj.bib
+++ b/dissertation/l4proj.bib
@@ -116,7 +116,7 @@
    year = {2017},
 }
 
-@inbook{Bartoszewski2019,
+@incollection{Bartoszewski2019,
    abstract = {This paper presents the issue of geographic data storage in NoSQL databases. The authors present the performance investigation of the non-relational database MongoDB with its built-in spatial functions in relation to the PostgreSQL database with a PostGIS spatial extension. As part of the tests, the authors were designed queries simulating common problems in the processing of point data. In addition, the main advantages and disadvantages of NoSQL databases are presented in the context of the ability to manipulate spatial data.},
    author = {Dominik Bartoszewski and Adam Piorkowski and Michal Lupa},
    doi = {10.1007/978-3-030-19093-4_22},
