Added a paragraph on why I used kotlin in the dissertation

--- a/dissertation/l4proj.bib
+++ b/dissertation/l4proj.bib
@@ -193,3 +193,19 @@
    url={https://www.mongodb.com/},
    urldate={2023-02-07},
 }
+
+@misc{kotlin,
+   author={{JetBrains}},
+   title={Kotlin},
+   url={https://kotlinlang.org/},
+   year={2023},
+   urldate={2023-02-07}
+}
+
+@misc{kotlinAndroid,
+   author={{Google Developers}},
+   title={Kotlin for Android},
+   url={https://developer.android.com/kotlin},
+   year={2023},
+   urldate={2023-02-07}
+}
