Started work on the deployment section in the dissertation

--- a/dissertation/l4proj.bib
+++ b/dissertation/l4proj.bib
@@ -209,3 +209,19 @@
    year={2023},
    urldate={2023-02-07}
 }
+
+@misc{github,
+   author={{GitHub}},
+   title={GitHub},
+   url={https://github.com/},
+   year={2023},
+   urldate={2023-02-09}
+}
+
+@misc{railway,
+   author={{Railway Corp.}},
+   title={Railway.app},
+   url={https://railway.app/},
+   year={2023},
+   urldate={2023-02-09} 
+}
