Started writing up the User Interface

--- a/dissertation/l4proj.bib
+++ b/dissertation/l4proj.bib
@@ -225,3 +225,11 @@
    year={2023},
    urldate={2023-02-09} 
 }
+
+@misc{googleMaps,
+   author={{Google Developers}},
+   title={{Google Maps SDK for android}},
+   url={https://developers.google.com/maps/documentation/android-sdk/overview},
+   year={2023},
+   urldate={2023-02-12}
+}
