--- a/dissertation/l4proj.tex
+++ b/dissertation/l4proj.tex
@@ -419,7 +419,7 @@ to gain GNSS coordinates and some vital information like the signal noise ratio 
 which gives me a lot of further information which can be useful for creating algorithms that can determine whether a player
 is in a GPS Shadow or not.
 
-\section{Deployment}
+\subsection{Deployment}
 \label{deployment}
 Having the front-end of the game as a Kotlin app brought a couple of challenges when developing. For one thing, it meant
 that I couldn't run my server locally if I wanted to test my location tracking or other features with my mobile app. Therefore
@@ -493,13 +493,27 @@ on the server side. When the user connects to the game, the requests using the H
 are handled by index.js. Most of the other configuration is handled here, for example instances of the classes
 defined in GPSMongo.js and GameLog.js are initialized here. Once the user has successfully connected to a WebSocket,
 any further messages are processed in WebSocketOperations.js. Depending on the event required the data is sent
-to GPSMongo.js or GameLog.js which then queries one of three collections (GPSShadows, players, games) in my MongoDB database. 
+to GPSMongo.js or GameLog.js which then queries one of three collections (GPSShadows, players, games) in my MongoDB database.
 
 \subsection{WebSocketOperations.js}
 As I mentioned in section \ref{serverOverview}, the WebSocketOperations.js file is the main base of operations for
 the rest of the game. Whenever a user connects to a server, the methods inside the WebSocketOperations class will take
 the user's details like their phone brand and model and then returns them with an id. This id is attached to the connection
-object that I could use to keep track of which player is sending the message.
+object that I could use to keep track of which player is sending the message. The WebSocketOperations.js file is also
+responsible for keeping track of whether a game is running or not. If the user were to press the start game button on the
+user interface, then the class will run the various methods to work out who will be the chaser.
+
+While the game is running, the WebSocketOperations class will also do some background tasks to make sure that no
+player would have an unfair disadvantage while playing the game. The most important task is to have time sync for
+the overall game time and when a player ends their jail time. This works by having a background asynchronous method
+that counts out 30 seconds. When that time is up, the server will broadcast the current time to all of the players.
+I thought that this was necessary due to the fact that while I had a working timer on the User Interface, I would
+notice that the times would get out of sync with the other players. I also wanted to ensure that both the jail time
+and the game as a whole would end for both players at the same time to avoid any problems or glitches that could happen
+if one player was still in the game and another was outside the game. The server allowed me to address any syncing
+problems on the mobile app.
+
+
 
 \subsection{GPSMongo.js and GameLog.js}
 
