--- a/dissertation/l4proj.tex
+++ b/dissertation/l4proj.tex
@@ -513,7 +513,12 @@ and the game as a whole would end for both players at the same time to avoid any
 if one player was still in the game and another was outside the game. The server allowed me to address any syncing
 problems on the mobile app.
 
-
+As well as keeping the time of the game, the WebSocketOperations.js file has a lot of other systems in place for enforcing the
+rules of the game. One of the main parts of my design for the game was that a Chaser would not be allowed to see the Runner's
+location if the game was in Jail Time or whether the player was in a Shadow. I managed to implement this rule by making
+a function within this file that executes whenever a phone sends a location object. This was especially useful as I could
+use it to ensure that locations would always go to the logging database, but will only go to the chaser player if a certain
+condition was met.
 
 \subsection{GPSMongo.js and GameLog.js}
 
