Added more parts to the catching mechanic

--- a/dissertation/l4proj.bib
+++ b/dissertation/l4proj.bib
@@ -233,3 +233,11 @@
    year={2023},
    urldate={2023-02-12}
 }
+
+@misc{geoSpatial,
+   author={{MongoDB, Inc.}},
+   title={{Geospatial Queries}},
+   year={2023},
+   url={https://www.mongodb.com/docs/manual/geospatial-queries/#geospatial-models}
+   urldate={2023-02-21}
+}
