--- a/dissertation/l4proj.tex
+++ b/dissertation/l4proj.tex
@@ -555,7 +555,7 @@ that it disconnected from the WebSocket after 5 minutes.
 The players collection was also useful for implementing the catching mechanic (see section \ref{catching} for the design). Originally I had planned to put this on the mobile side
 as the chaser was able to see the real time locations of the other players, however I found that constantly querying the distance function
 on the LocationManager API was affecting the performance of the game. Thankfully, MongoDB offers geospatial queries which allowed me to
-easily get data points within a certain radius. To check whether a runner player was in the catch radius, I just used the query shown in
+easily get data points within a certain radius. To check whether a runner player was in the catch radius, I used the query shown in
 listing \ref{lst:catching} to get a list of players within the radius. I then created an array with the results. If the array length is greater
 than 0 then we send a message to the WebSocketOperations.js file to turn the captured user into a Chaser. 
 
